Zaion pensa e repensa as atitudes

--- a/src/Cpnucleo.MVC/appsettings.Development.json
+++ b/src/Cpnucleo.MVC/appsettings.Development.json
@@ -11,17 +11,7 @@
   },
   "AppSettings": {
     "UrlCpnucleoApiAuth": "https://localhost:7193",
-    "UrlCpnucleoGrpcApontamento": "https://localhost:7035",
-    "UrlCpnucleoGrpcImpedimento": "https://localhost:7000",
-    "UrlCpnucleoGrpcImpedimentoTarefa": "https://localhost:7073",
-    "UrlCpnucleoGrpcProjeto": "https://localhost:7215",
-    "UrlCpnucleoGrpcRecurso": "https://localhost:7127",
-    "UrlCpnucleoGrpcRecursoProjeto": "https://localhost:7202",
-    "UrlCpnucleoGrpcRecursoTarefa": "https://localhost:7245",
-    "UrlCpnucleoGrpcSistema": "https://localhost:7177",
-    "UrlCpnucleoGrpcTarefa": "https://localhost:7031",
-    "UrlCpnucleoGrpcTipoTarefa": "https://localhost:7232",
-    "UrlCpnucleoGrpcWorkflow": "https://localhost:7161"
+    "UrlCpnucleoGrpc": "https://localhost:5021"
   },
   "ApplicationConfigurations": {
     "NomeSistema": "CPN"
