--- a/src/Cpnucleo.MVC/appsettings.json
+++ b/src/Cpnucleo.MVC/appsettings.json
@@ -11,17 +11,7 @@
   },
   "AppSettings": {
     "UrlCpnucleoApiAuth": "https://api-cpnucleo-auth.azurewebsites.net",
-    "UrlCpnucleoGrpcApontamento": "https://grpc-cpnucleo-apontamento.azurewebsites.net",
-    "UrlCpnucleoGrpcImpedimento": "https://grpc-cpnucleo-impedimento.azurewebsites.net",
-    "UrlCpnucleoGrpcImpedimentoTarefa": "https://grpc-cpnucleo-impedimento-tarefa.azurewebsites.net",
-    "UrlCpnucleoGrpcProjeto": "https://grpc-cpnucleo-projeto.azurewebsites.net",
-    "UrlCpnucleoGrpcRecurso": "https://grpc-cpnucleo-recurso.azurewebsites.net",
-    "UrlCpnucleoGrpcRecursoProjeto": "https://grpc-cpnucleo-recurso-projeto.azurewebsites.net",
-    "UrlCpnucleoGrpcRecursoTarefa": "https://grpc-cpnucleo-recurso-tarefa.azurewebsites.net",
-    "UrlCpnucleoGrpcSistema": "https://grpc-cpnucleo-sistema.azurewebsites.net",
-    "UrlCpnucleoGrpcTarefa": "https://grpc-cpnucleo-tarefa.azurewebsites.net",
-    "UrlCpnucleoGrpcTipoTarefa": "https://grpc-cpnucleo-tipo-tarefa.azurewebsites.net",
-    "UrlCpnucleoGrpcWorkflow": "https://grpc-cpnucleo-workflow.azurewebsites.net"
+    "UrlCpnucleoGrpc": "https://grpc-cpnucleo.azurewebsites.net"
   },
   "ApplicationConfigurations": {
     "NomeSistema": "CPN"
