--- a/src/Cpnucleo.Application/Cpnucleo.Application.csproj
+++ b/src/Cpnucleo.Application/Cpnucleo.Application.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="Ev.ServiceBus" Version="3.3.0" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.6" />
 		<PackageReference Include="MagicOnion.Abstractions" Version="4.3.1" />
 		<PackageReference Include="MediatR" Version="9.0.0" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
