--- a/src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj
+++ b/src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj
@@ -16,7 +16,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.IoC\Cpnucleo.Infra.CrossCutting.IoC.csproj" />
-	</ItemGroup>
+		<ProjectReference Include="..\Cpnucleo.Application\Cpnucleo.Application.csproj" />
+		<ProjectReference Include="..\Cpnucleo.Domain\Cpnucleo.Domain.csproj" />
+		<ProjectReference Include="..\Cpnucleo.Infra.Data\Cpnucleo.Infra.Data.csproj" />
+	</ItemGroup>	
 
 </Project>
