[chore] Zaion nunca esquece de seus propositos. Volta a trabalhar sempre que possível

--- a/src/Cpnucleo.RazorPages/appsettings.json
+++ b/src/Cpnucleo.RazorPages/appsettings.json
@@ -8,6 +8,7 @@
     "Expires": "720"
   },
   "AppSettings": {
+    "UrlCpnucleoApiAuth": "https://api-cpnucleo-auth.azurewebsites.net",
     "UrlCpnucleoApi": "https://api-cpnucleo.azurewebsites.net"
   },
   "ApplicationConfigurations": {
