--- a/src/Cpnucleo.RazorPages/appsettings.Development.json
+++ b/src/Cpnucleo.RazorPages/appsettings.Development.json
@@ -10,6 +10,7 @@
     "Expires": "720"
   },
   "AppSettings": {
+    "UrlCpnucleoApiAuth": "https://localhost:7193",
     "UrlCpnucleoApi": "http://localhost:5010"
   },
   "ApplicationConfigurations": {
