[feat] Migrado projeto MVC. Adicionado middleware para header no Razor Pages

--- a/src/Cpnucleo.API/appsettings.Development.json
+++ b/src/Cpnucleo.API/appsettings.Development.json
@@ -9,7 +9,7 @@
   "Jwt": {
     "Key": "fedaf7d8863b48e197b9287d492b708e",
     "Expires": "43200",
-    "Issuer": "http://localhost:5010"
+    "Issuer": "https://localhost:7193"
   },
   "AppSettings": {
     "UrlCpnucleoBlazor": "https://localhost:5041"
