--- a/src/Cpnucleo.Application.Test/Cpnucleo.Application.Test.csproj
+++ b/src/Cpnucleo.Application.Test/Cpnucleo.Application.Test.csproj
@@ -8,16 +8,29 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper" Version="10.1.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
-		<PackageReference Include="Moq" Version="4.16.1" />
+	  <Compile Remove="Handlers\ApontamentoHandlerTest.cs" />
+	  <Compile Remove="Handlers\ImpedimentoHandlerTest.cs" />
+	  <Compile Remove="Handlers\ImpedimentoTarefaHandlerTest.cs" />
+	  <Compile Remove="Handlers\ProjetoHandlerTest.cs" />
+	  <Compile Remove="Handlers\RecursoHandlerTest.cs" />
+	  <Compile Remove="Handlers\RecursoProjetoHandlerTest.cs" />
+	  <Compile Remove="Handlers\RecursoTarefaHandlerTest.cs" />
+	  <Compile Remove="Handlers\TarefaHandlerTest.cs" />
+	  <Compile Remove="Handlers\TipoTarefaHandlerTest.cs" />
+	  <Compile Remove="Handlers\WorkflowHandlerTest.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="11.0.1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.5" />
+		<PackageReference Include="Moq" Version="4.18.1" />
 		<PackageReference Include="xunit" Version="2.4.1" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="3.1.0">
+		<PackageReference Include="coverlet.collector" Version="3.1.2">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
