[feat] Mais configurações necessárias para migrações automaticas

--- a/src/Cpnucleo.API.Auth/appsettings.json
+++ b/src/Cpnucleo.API.Auth/appsettings.json
@@ -4,6 +4,9 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Cpnucleo.db"
+  },
   "Jwt": {
     "Key": "fedaf7d8863b48e197b9287d492b708e",
     "Expires": "43200",
