--- a/src/Cpnucleo.GRPC/appsettings.json
+++ b/src/Cpnucleo.GRPC/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Cpnucleo.db"
+  },
   "Jwt": {
     "Key": "fedaf7d8863b48e197b9287d492b708e",
     "Expires": "43200",
@@ -14,10 +17,10 @@
   "AppSettings": {
     "UrlCpnucleoMvc": "https://cpnucleo-mvc.azurewebsites.net"
   },
-  "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
