[feat] Adicionada copia dos arquivos para teste. Necessário por conta do SQLite

--- a/src/Cpnucleo.Application.Test/Cpnucleo.Application.Test.csproj
+++ b/src/Cpnucleo.Application.Test/Cpnucleo.Application.Test.csproj
@@ -28,4 +28,10 @@
 		<ProjectReference Include="..\..\src\Cpnucleo.Infra.Data\Cpnucleo.Infra.Data.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
