--- a/src/Cpnucleo.API/azure-pipelines.yml
+++ b/src/Cpnucleo.API/azure-pipelines.yml
@@ -37,9 +37,13 @@ steps:
 - powershell: |
    dotnet tool install --global dotnet-ef --ignore-failed-sources
    dotnet-ef database update --connection "Data Source=Cpnucleo.db"
-   dir
   workingDirectory: '$(System.DefaultWorkingDirectory)/src/Cpnucleo.Infra.Data/'
   displayName: 'Generate Database Migrations'
+
+- powershell: |
+   dir
+  workingDirectory: '$(System.DefaultWorkingDirectory)/src/Cpnucleo.Infra.Data/'
+  displayName: 'Generate Database Migrations 2'
 
 - task: DotNetCoreCLI@2
   displayName: Test
