--- a/src/Cpnucleo.API/Cpnucleo.API.csproj
+++ b/src/Cpnucleo.API/Cpnucleo.API.csproj
@@ -29,6 +29,18 @@
 		<ProjectReference Include="..\Cpnucleo.Infra.CrossCutting.Bus\Cpnucleo.Infra.CrossCutting.Bus.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="Cpnucleo.db">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Cpnucleo.db-shm">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Cpnucleo.db-wal">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 	<PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
