--- a/src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj
+++ b/src/Cpnucleo.GRPC/Cpnucleo.GRPC.csproj
@@ -12,12 +12,28 @@
 		<PackageReference Include="Grpc.AspNetCore.Web" Version="2.46.0" />
 		<PackageReference Include="MagicOnion.Server" Version="4.5.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Cpnucleo.Application\Cpnucleo.Application.csproj" />
 		<ProjectReference Include="..\Cpnucleo.Infra.Data\Cpnucleo.Infra.Data.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Cpnucleo.db">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Cpnucleo.db-shm">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Cpnucleo.db-wal">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>	
 
 </Project>
