--- a/src/Cpnucleo.API.Auth/Properties/launchSettings.json
+++ b/src/Cpnucleo.API.Auth/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "Cpnucleo.API.Auth": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7193;http://localhost:5193",
       "environmentVariables": {
