--- a/src/Cpnucleo.API/Properties/launchSettings.json
+++ b/src/Cpnucleo.API/Properties/launchSettings.json
@@ -1,14 +1,15 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "Cpnucleo.API": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5010;https://localhost:5011",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:5010;https://localhost:5011"
+      }
     }
   }
 }
