--- a/src/Cpnucleo.Blazor/Properties/launchSettings.json
+++ b/src/Cpnucleo.Blazor/Properties/launchSettings.json
@@ -1,8 +1,9 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "Cpnucleo.Blazor": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:5041;http://localhost:5040",
