--- a/src/Cpnucleo.GRPC/Properties/launchSettings.json
+++ b/src/Cpnucleo.GRPC/Properties/launchSettings.json
@@ -1,12 +1,12 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "Cpnucleo.GRPC": {
       "commandName": "Project",
+      "applicationUrl": "https://localhost:5021",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5021"
+      }
     }
   }
 }
