--- a/src/Cpnucleo.RazorPages/Properties/launchSettings.json
+++ b/src/Cpnucleo.RazorPages/Properties/launchSettings.json
@@ -1,13 +1,14 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "Cpnucleo.RazorPages": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
+      "applicationUrl": "http://localhost:5000;https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:5000;https://localhost:5001"
+      }
     }
   }
 }
