--- a/src/Cpnucleo.Infrastructure.Bus/Cpnucleo.Infrastructure.Bus.csproj
+++ b/src/Cpnucleo.Infrastructure.Bus/Cpnucleo.Infrastructure.Bus.csproj
@@ -8,7 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Ev.ServiceBus" Version="4.3.1" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0-rc.1.22426.10" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
 
