[feat] enabling gRPC + new conn strings

--- a/src/Cpnucleo.GRPC/appsettings.json
+++ b/src/Cpnucleo.GRPC/appsettings.json
@@ -14,10 +14,5 @@
   "AppSettings": {
     "UrlCpnucleoMvc": "https://cpnucleo-mvc.azurewebsites.net"
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
-  }
+  "AllowedHosts": "*"
 }
