[chore] Updated images for pipelines

--- a/src/Cpnucleo.API/azure-pipelines.yml
+++ b/src/Cpnucleo.API/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
   buildConfiguration: 'Release'  
 
 pool:
-  vmImage: 'ubuntu-20.04'
+  vmImage: 'windows-latest'
 
 name: $(date:yyyyMMdd)$(rev:.r)
 
