--- a/src/Cpnucleo.API/Cpnucleo.API.csproj
+++ b/src/Cpnucleo.API/Cpnucleo.API.csproj
@@ -21,7 +21,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Cpnucleo.Application\Cpnucleo.Application.csproj" />
 		<ProjectReference Include="..\Cpnucleo.Domain\Cpnucleo.Domain.csproj" />
-		<ProjectReference Include="..\Cpnucleo.Infrastructure.Data\Cpnucleo.Infrastructure.Data.csproj" />
+		<ProjectReference Include="..\Cpnucleo.Infrastructure\Cpnucleo.Infrastructure.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup>
