--- a/src/Cpnucleo.Application/Cpnucleo.Application.csproj
+++ b/src/Cpnucleo.Application/Cpnucleo.Application.csproj
@@ -9,10 +9,10 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-		<PackageReference Include="Ev.ServiceBus" Version="4.4.0" />
-		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
-		<PackageReference Include="Microsoft.Azure.SignalR" Version="1.18.3" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0-rc.1.22426.10" />
+		<PackageReference Include="Ev.ServiceBus" Version="4.5.0" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
+		<PackageReference Include="Microsoft.Azure.SignalR" Version="1.19.2" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
