--- a/src/Cpnucleo.Infrastructure/Cpnucleo.Infrastructure.csproj
+++ b/src/Cpnucleo.Infrastructure/Cpnucleo.Infrastructure.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
 		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
 	</ItemGroup>
 
