--- a/src/Cpnucleo.API/Properties/launchSettings.json
+++ b/src/Cpnucleo.API/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "Cpnucleo.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5010;https://localhost:5011",
       "environmentVariables": {
