--- a/src/Cpnucleo.RazorPages/appsettings.Development.json
+++ b/src/Cpnucleo.RazorPages/appsettings.Development.json
@@ -1,16 +1,16 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "Cookie": {
     "Expires": "720"
   },
   "AppSettings": {
-    "UrlCpnucleoApi": "http://localhost:5010"
+    "UrlCpnucleoApi": "https://localhost:5011"
   },
   "ApplicationConfigurations": {
     "NomeSistema": "CPN"
