--- a/src/Cpnucleo.GRPC/Properties/launchSettings.json
+++ b/src/Cpnucleo.GRPC/Properties/launchSettings.json
@@ -3,6 +3,7 @@
   "profiles": {
     "Cpnucleo.GRPC": {
       "commandName": "Project",
+      "launchBrowser": true,
       "applicationUrl": "https://localhost:5021",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
