--- a/src/Cpnucleo.Application/Cpnucleo.Application.csproj
+++ b/src/Cpnucleo.Application/Cpnucleo.Application.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Ev.ServiceBus" Version="4.8.1" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
+		<PackageReference Include="Mediator.SourceGenerator" Version="2.0.30" />
 		<PackageReference Include="Microsoft.Azure.SignalR" Version="1.21.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
