--- a/src/Cpnucleo.Shared/Cpnucleo.Shared.csproj
+++ b/src/Cpnucleo.Shared/Cpnucleo.Shared.csproj
@@ -8,7 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MagicOnion.Abstractions" Version="5.1.2" />
-		<PackageReference Include="MediatR" Version="12.0.1" />
+		<PackageReference Include="Mediator.Abstractions" Version="2.0.30" />
 	</ItemGroup>
 
 </Project>
