enabled grpc-web protocol on grpc project

--- a/src/Cpnucleo.API/appsettings.Development.json
+++ b/src/Cpnucleo.API/appsettings.Development.json
@@ -11,7 +11,5 @@
     "Expires": "43200",
     "Issuer": "https://localhost:5011"
   },
-  "AppSettings": {
-    "UrlCpnucleoBlazor": "https://localhost:5041"
-  }
+  "AllowedHosts": "*"
 }
