--- a/src/Cpnucleo.GRPC/appsettings.Development.json
+++ b/src/Cpnucleo.GRPC/appsettings.Development.json
@@ -12,7 +12,5 @@
     "Expires": "43200",
     "Issuer": "https://localhost:5021"
   },
-  "AppSettings": {
-    "UrlCpnucleoMvc": "https://localhost:5031"
-  }
+  "AllowedHosts": "*"
 }
