--- a/src/Cpnucleo.GRPC/Properties/launchSettings.json
+++ b/src/Cpnucleo.GRPC/Properties/launchSettings.json
@@ -3,8 +3,8 @@
   "profiles": {
     "Cpnucleo.GRPC": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5243",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:5021",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
