--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
-version: "3.9"
 name: "cpnucleo"
 
 services:
-  webapi1: &webapi1 # image: jonathanperis/rinha2-back-end-bora-dale:latest
+  webapi1: &webapi1
     build:
       context: .
-      dockerfile: src/WebApi/Dockerfile
+      dockerfile: src/WebAPI/Dockerfile    
     hostname: webapi1
     container_name: webapi-1
     depends_on:
       - db
-    restart: always
+    restart: always      
     environment:
-      ConnectionStrings__DefaultConnection: Host=db;Username=postgres;Password=postgres;Database=rinha;No Reset On Close=true;Max Auto Prepare=10;Auto Prepare Min Usages=1;Pooling=true;Maximum Pool Size=50;
+      ASPNETCORE_ENVIRONMENT: Development
+      ConnectionStrings__DefaultConnection: Host=db;Username=postgres;Password=postgres;Database=cpnucleo;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;
     deploy:
       resources:
         limits:
           cpus: "0.4"
-          memory: "200MB"
-
+          memory: "100MB"
+  
   webapi2:
     <<: *webapi1
     hostname: webapi2
@@ -27,30 +27,32 @@ services:
   db:
     image: postgres
     hostname: db
-    container_name: cpnucleo-db
+    container_name: db-cpnucleo
     restart: always
-    ports:
-      - "5432:5432"
+    # depends_on:
+    #   - postgres-exporter      
     volumes:
       - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: rinha
+      POSTGRES_DB: cpnucleo
+    ports:
+      - "5432:5432"      
     deploy:
       resources:
         limits:
           cpus: "0.5"
-          memory: "130MB"
-    command: postgres -c max_connections=150
+          memory: "330MB"
+    command: postgres -c checkpoint_timeout=600 -c max_wal_size=4096 -c synchronous_commit=0 -c fsync=0 -c full_page_writes=0
 
   nginx:
     image: nginx
     hostname: nginx
-    container_name: cpnucleo-nginx
+    container_name: nginx-cpnucleo
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
+    depends_on: 
       - webapi1
       - webapi2
     ports:
@@ -61,7 +63,31 @@ services:
           cpus: "0.2"
           memory: "20MB"
 
-networks:
+  # postgres-exporter:
+  #   image: prometheuscommunity/postgres-exporter  
+  #   ports:
+  #     - 9187:9187
+  #   environment:
+  #     DATA_SOURCE_NAME: "postgresql://postgres:postgres@db:5432/rinha?sslmode=disable"
+
+  # prometheus:
+  #   image: prom/prometheus
+  #   ports:
+  #     - "9090:9090"
+  #   volumes:
+  #     - "./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
+
+  # grafana:
+  #     image: grafana/grafana-oss   
+  #     ports:
+  #       - "3000:3000"
+  #     volumes:
+  #       - "./grafana/provisioning/:/etc/grafana/provisioning/"
+  #       - "./grafana/dashboards/:/var/lib/grafana/dashboards/"
+  #     depends_on:
+  #       - prometheus
+
+networks: 
   default:
     driver: bridge
-    name: cpnucleo-network
+    name: network-cpnucleo
