--- a/src/WebApi/Properties/launchSettings.json
+++ b/src/WebApi/Properties/launchSettings.json
@@ -1,22 +1,12 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5064",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7102;http://localhost:5064",
+      "applicationUrl": "https://localhost:9876",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
